taskListView.css
/* Task Styling                                     */
/* ================================================ */
.winListView {
	display: grid;
	grid-template-columns: 1.8em 0.9fr auto;
    grid-template-rows: 2.5em 2em;
	grid-column-gap: 0.25em;
    height: 4.5em;
    justify-items: start;
    border: transparent;
    border-bottom-color: var(--dwc-color-gray-80);
    padding-right: 0.5em;
}

dwc-checkbox {
    grid-column: 1;
    grid-row: 1;
}

.winListView .dueNotice {
    grid-row: 1;
    grid-column: 3;
    justify-self: right;
    white-space: nowrap;
}

.task dwc-static-text {
    font-size: 1.1em;
    align-self: center;
    white-space: nowrap;
	text-overflow: ellipsis;
	max-width: 99%;
    transition: letter-spacing 100ms ease;
}

.task dwc-static-text.textTitle, .task dwc-static-text.textDescription {
    font-family: var(--app-font-family-task);
    font-weight: var(--app-font-weight-task);
    letter-spacing: var(--app-font-spacing-task);
}

/* Title styling on task-list-view */
.task .title-display {
	/* font-weight: 700; */
}

/* Description styling on task-list-view */
.winListView .textDescription {
    /* opacity: 0.5; */
    align-self: start;
    grid-column: 2 / 2;
    color: hsla(var(--app-color-h), 15%, 50%);
}

.winListView .priorityFlag {
    justify-self: right;
    align-self: start;
    grid-column: 3 / 3;
    grid-row: 2;
}

/* Task items that are incomplete */
.winListView dwc-checkbox::part(input-wrapper) {
    border-color: var(--dwc-color-gray-50);
    background-color: var(--dwc-color-white);
}

/* Task items that are complete */

dwc-checkbox[checked]::part(input-wrapper) {
	border-color: var(--app-color-primary);
	background-color: hsla(var(--app-color-h), 15%, 40%);
    color: var(--dwc-color-black);
}

/* Items that are clickable, and hovered over */
.clickable:hover {
    /* filter: brightness(80%); */
    background: var(--dwc-surface-1);
    transition: all 200ms ease;
}
.task:hover dwc-checkbox {
    animation: pulse 500ms ease-in-out 1 forwards;
}


/* Checkbox styling on task-list-view */
dwc-checkbox::part(input-wrapper) {
	border-radius: 100%;
	color: var(--dwc-color-black);
	transform: scale3d(1.25, 1.25, 1);
    justify-content: center;
    align-self: center;
}

/* Fades check mark on mouse enter/exit on a checkbox */
dwc-checkbox::part(checked-icon) {
    transform: scale(1) translate3d(0px, 0px, 0px);
    transition: all 250ms ease-in-out;
    opacity: 0;
}

dwc-checkbox[checked]::part(checked-icon) {
    opacity: 1;
}

dwc-checkbox[checked]:hover::part(checked-icon) {
    /* Checked, hovering over the checkbox */
    opacity: 0.75;
}
dwc-checkbox:not([checked]):hover::part(checked-icon) {
    /* Unchecked, hovering over the checkbox */
    opacity: 0.25;
}

